# btrfs-backup

./: .clippy.toml  .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config  runner.sh
.github/workflows/: build.yml  publish.yml  test.yml
btrfs-backup/: Makefile  README.md  setup.py
btrfs-backup/src/deso/btrfs/: alias.py  argv.py  btrfs-backup  command.py  main.py  program.py  repository.py
btrfs-backup/src/deso/btrfs/test/: __init__.py  btrfsTest.py  testArgv.py  testBtrfs.py  testLocaleCompliance.py  testMain.py  testRepository.py  util.py
cleanup/: Makefile  README.md
cleanup/src/deso/cleanup/: __init__.py  defer.py
cleanup/src/deso/cleanup/test/: __init__.py  testDefer.py
execute/: Makefile
execute/src/deso/execute/: __init__.py  execute_.py  util.py
execute/src/deso/execute/test/: __init__.py  testExecute.py
src/: args.rs  lib.rs  main.rs  ops.rs  redefine.rs  repo.rs  snapshot.rs  test.rs  util.rs
src/btrfs/: btrfs.rs  commands.rs  mod.rs
tests/: end-to-end.rs
var/: sh-run  shell-complete.rs
