[package]
name = "btrfs-backup"
version = "0.0.0"
authors = ["Daniel Mueller <deso@posteo.net>"]
edition = "2021"
license = "GPL-3.0-or-later"
description = """
A program for backup & restoration of btrfs subvolumes.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
once_cell = "1.17.0"
regex = {version = "1.7.1", default-features = false, features = ["std"]}
time = {version = "0.3.18", features = ["local-offset", "macros", "parsing"]}
uname = "0.1.1"

[dev-dependencies]
serial_test = "1.0.0"
tempfile = "3.3.0"
