[package]
name = "btrfs-backup"
version = "0.0.0"
authors = ["Daniel Mueller <deso@posteo.net>"]
edition = "2021"
license = "GPL-3.0-or-later"
description = """
A program for backup & restoration of btrfs subvolumes.
"""
default-run = "btrfs-backup"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Include features relevant for testing.
test = ["tempfile"]

[[bin]]
name = "shell-complete"
path = "var/shell-complete.rs"
required-features = ["clap_complete"]

[[test]]
name = "end-to-end"
path = "tests/end-to-end.rs"
required-features = ["test"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
incremental = false
panic = "abort"

[build-dependencies]
anyhow = "1.0.68"
grev = "0.1.3"

[dependencies]
anyhow = "1.0.68"
clap = {version = "4.1.4", features = ["derive"]}
clap_complete = {version = "4.1.1", optional = true}
once_cell = "1.17.0"
regex = {version = "1.7.1", default-features = false, features = ["std"]}
tempfile = {version = "3.3.0", optional = true}
time = {version = "0.3.18", features = ["local-offset", "macros", "parsing"]}
uname = "0.1.1"

[dev-dependencies]
serial_test = "1.0.0"
tempfile = "3.3.0"
