[package]
name = "btrfs-backup"
version = "0.2.2"
authors = ["Daniel Mueller <deso@posteo.net>"]
edition = "2021"
license = "GPL-3.0-or-later"
homepage = "https://github.com/d-e-s-o/btrfs-backup"
repository = "https://github.com/d-e-s-o/btrfs-backup.git"
readme = "README.md"
categories = [
  "filesystem",
  "command-line-utilities",
]
keywords = ["btrfs", "btrfs-backup", "backup", "cli", "filesystem"]
description = """
A program for backup & restoration of btrfs subvolumes.
"""
default-run = "btrfs-backup"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Include features relevant for testing.
test = ["dep:tempfile"]

[[bin]]
name = "shell-complete"
path = "var/shell-complete.rs"
required-features = ["clap_complete"]

[[test]]
name = "end-to-end"
path = "tests/end-to-end.rs"
required-features = ["test"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
incremental = false
panic = "abort"

[build-dependencies]
anyhow = "1.0.68"
grev = "0.1.3"

[dependencies]
anyhow = "1.0.68"
clap = {version = "4.1.4", features = ["derive"]}
clap_complete = {version = "4.1.1", optional = true}
regex = {version = "1.7.1", default-features = false, features = ["std"]}
tempfile = {version = "3.3.0", optional = true}
time = {version = "0.3.37", features = ["formatting", "local-offset", "parsing"]}
uname = "0.1.1"

[dev-dependencies]
glob = "0.3.1"
goblin = "0.10.0"
memmap = "0.7.0"
serial_test = "3.0.0"
tempfile = "3.3.0"

[lints.rust]
deprecated-safe = "warn"
future-incompatible = "warn"
keyword-idents = "warn"
let-underscore = "warn"
missing-copy-implementations = "warn"
missing-debug-implementations = "warn"
missing-docs = "warn"
trivial-numeric-casts = "warn"
unused = "warn"

[lints.clippy]
collapsible-else-if = "allow"
collapsible-if = "allow"
let-and-return = "allow"
let-unit-value = "allow"
module-inception = "allow"
absolute-paths = "warn"
clone-on-ref-ptr = "warn"
dbg-macro = "warn"
doc-markdown = "warn"
join-absolute-paths = "warn"
large-enum-variant = "warn"
redundant-closure-for-method-calls = "warn"
unchecked-duration-subtraction = "warn"
uninlined-format-args = "warn"
unwrap-used = "warn"
